# OpenFDTD

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  diff.patch
.claude/: settings.json
.github/workflows/: ci.yml
cuda/: average.cu  check_gpu.cu  dftNear3d.cu  efeed.cu  eload.cu  info_gpu.cu  memallocfree2_gpu.cu  memallocfree3_gpu.cu  murH.cu  pbcx.cu  pbcy.cu  pbcz.cu  pmlEx.cu  pmlEy.cu  pmlEz.cu  pmlHx.cu  pmlHy.cu  pmlHz.cu  reduction_sum.cu  setup_gpu.cu  solve.cu  updateEx.cu  updateEy.cu  updateEz.cu  updateHx.cu  updateHy.cu  updateHz.cu  vpoint.cu
cuda_mpi/: comm_cuda_X.cu  comm_cuda_Y.cu  comm_cuda_Z.cu  info_gpu_mpi.cu  solve.cu
data/sample/: tpa_slab.ofd  tpa_slab_check.sh
datalib/: ofd_datalib.c  ofd_datalib.h  sample1.c  sample2.c  sample3.c
include/: complex.h  ev.h  finc.h  ofd.h  ofd_cuda.h  ofd_prototype.h
mpi/: comm.c  comm_X.c  comm_Y.c  comm_Z.c  setup_mpi.c  solve.c
post/: calcNear1d.c  calcNear2d.c  ev2d.c  ev2dlib.c  ev3dlib.c  outputFar0d.c  outputFar1d.c  outputFar2d.c  outputNear1d.c  outputNear2d.c  planewave.c  plot2dFar0d0.c  plot2dFar1d0.c  plot2dFeed.c  plot2dFreq.c  plot2dFreq0.c  plot2dIter.c  plot2dNear1d0.c  plot2dNear2d0.c  plot2dPoint.c  plot3dFar2d.c  plot3dFar2d0.c  plot3dNear2d0.c  post.c  post_data.c  read_metadata_from_hdf5_2.c  readhdf5.c  readout.c
python/post/: plot_near2d.py
python/sol/: updateHx.py
python/tests/: README.md  conftest.py  test_average.py  test_dft.py  test_feed_volt.py  test_getspan.py  test_material_factor.py  test_planewave.py  test_update_equivalence.py  test_update_reference.py
qt/: CMakeLists.txt  README.md
qt/src/: I18n.cpp  MainWindow.cpp  MainWindow.h  main.cpp
qt/src/core/: Project.cpp  Project.h
qt/src/io/: OfdIO.cpp
qt/src/tabs/: GeometryTab.cpp  GeometryTab.h  MaterialTab.cpp
qt/src/widgets/: EvViewer.cpp  PlotPanel.h
qt/tests/: selftest.cpp
sol/: cputime.c  dftNear3d.c  dispersionEx.c  dispersionEy.c  dispersionEz.c  ev3d.c  farfield.c  geomlines.c  ingeometry.c  initfield.c  input2.c  input_data.c  memallocfree1.c  memallocfree2.c  memallocfree3.c  monitor.c  murH.c  nearfield_c.c  outputChars.c  outputCoupling.c  outputCross.c  outputSpara.c  outputZin.c  pbcx.c  pbcy.c  pbcz.c  plot3dGeom.c  pmlEx.c  pmlEy.c  pmlEz.c  pmlHx.c  pmlHy.c  pmlHz.c  setup.c  setupDft.c  setupId.c  setupPml.c  setupPmlEx.c  setupPmlEy.c  setupPmlEz.c  (+15 more)
src/: cuda_Main.cu  cuda_mpi_Main.cu  mpi_Main.c  post_Main.c  sol_Main.c
